switch to 32 bulk size